<resources>
    <string name="app_name">ITIS-Booking</string>
    <string name="bookings_page_title">Бронирования</string>
    <string name="timetable_page_title">Расписание</string>
    <string name="map_page_title">Карта</string>
    <string name="notification_page_title">Уведомления</string>
    <string name="profile_page_title">Профиль</string>

    <string name="web_client_id">7558764920-bgtfjlqlmpnb4sqgm4b8coght3q7qjba.apps.googleusercontent.com</string>

    <string name="snackbar_error_message">Произошла ошибка</string>

    <string name="btn_text_enter_by_google">Sign in with Google</string>
    <string name="description_login_page_itis_booking">Login page ITIS-Booking</string>
    <string name="filter_item_btn_title">filter button</string>
    <string name="help_item_btn_title">help button</string>
    <string name="logout_item_btn_title">Logout button</string>
    <string name="default_cabinet_number">1301</string>
    <string name="cabinet_capacity_title">Вместимость:</string>
    <string name="add_filter_approve">Отфильтровать</string>
    <string name="clear_filter">Очистить фильтр</string>

    <!--Map help dialog-->
    <string name="map_help_title">Значение цветов</string>
    <string name="map_help_description">Номера аудиторий принимают определенный цвет в зависимосимости от доступности для бронирования на данный момент времени</string>
    <string name="map_help_free_text">Аудитория свободна</string>
    <string name="map_help_booked_text">Аудитория занята</string>
    <string name="map_help_lock_text">Бронирование недоступно</string>

    <!--Profile priority help dialog-->
    <string name="priority_help_title">Что такое приоритет?</string>
    <string name="priority_help_description">Приоритет опредляет ваши возможности бронирования в случае, если вы не нашли подходящей аудиториии, но есть аудитории забронированные другими пользователями. Если ваш статус выше, участника забронировавшего аудиторию, то у вас есть возможность отбить бронь в свою пользу.</string>
</resources>
