<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_btn_icon"
        android:title="@string/map_page_title" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/bookings_btn_icon"
        android:title="@string/bookings_page_title" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/timetable_btn_icon"
        android:title="@string/timetable_page_title" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification_btn_icon"
        android:title="@string/notification_page_title" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_btn_icon"
        android:title="@string/profile_page_title" />
</menu>